# voices-admin

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
voices_admin/: settings.py  wsgi.py
voices_admin/core/: storage.py
voices_admin/initiatives/: admin.py  apps.py  models.py
voices_admin/initiatives/migrations/: 0001_initial.py
