[tool.poetry]
name = "tavrida-admin"
version = "0.1.0"
description = ""
authors = ["tavrida-admin"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
django-cors-headers = "^3.11.0"
django-environ = "^0.10.0"
djangorestframework = "^3.13.1"
factory-boy = "^3.2.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
sentry-sdk = "^1.5.7"
whitenoise = "^6.0.0"
django-s3-storage = "^0.13.6"
drf-yasg = "^1.21.5"
django-extensions = "^3.1.5"
pytest = "^7.1.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.7.0"
pytest-factoryboy = "^2.1.0"
djangorestframework-simplejwt = "^5.1.0"
django-mptt = "^0.14.0"
argon2-cffi = "^21.3.0"
coverage = "^7.2.2"
pillow = "^10.0.0"
uuid7 = "^0.1.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"
isort = "^5.9.3"
rope = "^1.5.1"
flake8 = "^4.0.1"
flake8-django = {git = "https://github.com/rocioar/flake8-django.git", rev = "000b0f70eeb84797ffca9cb3fe85bffe6251cbf1"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']
